crates/carta/tests/snapshots/golden_writer__revealjs__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>x<a href="#/fn1" class="footnote-ref" id="fnref1"
role="doc-noteref"><sup>1</sup></a> y<a href="#/fn2"
class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></p>
</section>
<section id="footnotes" class="footnotes footnotes-end-of-document"
role="doc-endnotes">
<hr />
<ol>
<li id="fn1"><p>first<a href="#/fnref1" class="footnote-back"
role="doc-backlink">↩︎</a></p></li>
<li id="fn2"><p>second<a href="#/fnref2" class="footnote-back"
role="doc-backlink">↩︎</a></p></li>
</ol>
</section>
