crates/carta/tests/snapshots/golden_writer__revealjs__common__header-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section id="anchor" class="title-slide slide level1 cls"
data-key="val">
<h1 class="cls" data-key="val">Titled</h1>

</section>
