crates/carta/tests/snapshots/golden_writer__revealjs__common__header-unnumbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section id="hidden" class="title-slide slide level1 unnumbered">
<h1 class="unnumbered">Hidden</h1>

</section>
