crates/carta/tests/snapshots/golden_writer__revealjs__common__horizontal-rule.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>above</p>
</section>
<section class="slide level6">

<p>below</p>
</section>
