crates/carta/tests/snapshots/golden_writer__revealjs__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><img data-src="https://example.org/i.png" alt="alt" /></p>
</section>
