crates/carta/tests/snapshots/golden_writer__revealjs__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>an <img data-src="pic.png" alt="alt words" /> inline</p>
</section>
