crates/carta/tests/snapshots/golden_writer__revealjs__common__inline-code-backtick.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>use <code>a `b` c</code> here</p>
</section>
