crates/carta/tests/snapshots/golden_writer__revealjs__common__inline-code-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>before
<code>a &amp; b ~ c \ d % e # f $ g _ h { i } j ^ k | l &lt; m &gt; n</code>
after</p>
</section>
