crates/carta/tests/snapshots/golden_writer__revealjs__common__inline-code.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>a <code>let x = 1;</code> b</p>
</section>
